# out_of_stock

./: README.md  start.bat
backend/: .gitignore  alerts.py  final_system_test.py  intelligence.py  main.py  pricesentinel_local.db  pyproject.toml  scheduler.py  test_alerts_simple.py  test_complete_system.py  test_complete_with_timing.py
backend/Agent/: .webhook_url  agent.py  language_preferences.json  language_store.py  test_agent.py  test_wasender.py  tools.py  tts_engine.py  webhook_server.py  whatsapp_sender.py
backend/db/: models.py  session.py  turso_client.py
backend/ml/: model.pth  notebook47021ba5db.ipynb  scaler.pkl  train_pipeline.py
backend/routers/: alerts.py  analytics.py  asins.py  auth.py  buybox.py  geo.py  ml.py  prices.py  scrape.py  sellers.py  suggest.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Navbar.jsx  RequireAuth.jsx
frontend/src/hooks/: usePolling.js
frontend/src/pages/: Alerts.jsx  Analytics.jsx  AsinSearch.jsx  BuyBox.jsx  Dashboard.jsx  GeoIntel.jsx  (+8 more)
pricesentinel/: .env.example  .gitignore  PROJECT_STATUS.md  README.md  cli.py  fetch_data.py  main.py  pyproject.toml  scrapy.cfg  test_db.py
pricesentinel/pricesentinel/: alerts.py  intelligence.py
pricesentinel/pricesentinel/db/: models.py  session.py  turso_client.py
pricesentinel/pricesentinel/scraper/: items.py  pipelines.py  settings.py
pricesentinel/pricesentinel/scraper/middlewares/: proxy.py  proxy_rotation.py  useragent.py
pricesentinel/pricesentinel/scraper/spiders/: amazon.py
(+8 files in other folders)
